feat: manage company configuration
